--- a/src/main/webapp/ui/vistas/crearUsuario.css
+++ b/src/main/webapp/ui/vistas/crearUsuario.css
@@ -1,14 +1,14 @@
 .cuerpo{
-
     display: flex;
     align-items: center;
     width: 100%;
     height: 100vh;
     justify-content: center;
-    background: yellow;
 }
 .paquete{
-    width: 70%;
+    border-style: solid;
+    border-radius: 5px;
+    width: 60%;
     display: flex;
     flex-direction: column;
 }
@@ -33,7 +33,11 @@
     display: flex;
     width: 50%;
     justify-content: center;
+    margin-left: 30px;
+    border-radius: 5px;
+    background: rgb(194, 194, 194);
 }
+
 .entrada{
     display: flex;
     width: 100%;
@@ -41,16 +45,24 @@
 
 .seccion{
     display: flex;
-    width: 40%;
+    width: 50%;
+    height: 50px;
+    align-items: center;
+}
+
+.spam{
+    display: flex;
+    width: 25%;
     height: 50px;
     align-items: center;
 }
 
 .textos{
     display: flex;
-    width: 20%;
+    width: 25%;
     height: 50px;
     align-items: center;
+    margin-left: 30px;
 }
 
 .alertas{
