terminando interfaz para crear un usuario
Signed-off-by: Pablo592 <pgaido524@alumnos.iua.edu.ar>

--- a/src/main/webapp/ui/vistas/crearUsuario.css
+++ b/src/main/webapp/ui/vistas/crearUsuario.css
@@ -38,6 +38,10 @@
     background: rgb(194, 194, 194);
 }
 
+.boton:hover{
+    background: rgb(155, 154, 154);
+}
+
 .entrada{
     display: flex;
     width: 100%;
