Anda el actualizar orden
Signed-off-by: Pablo592 <pgaido524@alumnos.iua.edu.ar>

--- a/src/main/webapp/ui/modulos/ordenes/ordenes.css
+++ b/src/main/webapp/ui/modulos/ordenes/ordenes.css
@@ -73,3 +73,12 @@
     background-color: transparent;
     height: 3vh;
 }
+
+.encabezado{
+    margin-top: 5vh;
+    border-style: 10px black solid;
+}
+
+.formulario{
+    margin-top: 5vh;
+}
