--- a/src/main/webapp/ui/modulos/ordenes/ordenes.css
+++ b/src/main/webapp/ui/modulos/ordenes/ordenes.css
@@ -1,84 +1,188 @@
-.fuente{
+.fuente {
     display: flex;
-    font-size: 2vh !important;
+    font-size: 20px;
     width: 50%;
     justify-content: start;
     align-items: center;
     min-width: 1vh;
-    height: 3vh;
+    height: 20px;
 }
 
-.titulo{
+.fuenteRadius {
+    display: flex;
+    font-size: 20px;
+    width: 100%;
+    justify-content: start;
+    align-items: center;
+    min-width: 1vh;
+    height: 20px;
+}
+
+.titulo {
+    border-width: 1px;
+    border: black solid;
+    background-color: rgb(207, 206, 206);
     display: flex;
     width: 100%;
     min-width: 1vh;
-    height: 4vh;
-    font-size: 1.5vh;
+    height: 30px;
+    font-size: 20px;
     justify-content: center;
     align-items: center;
 }
 
-.sector{
+.fuenteTabla {
+    border-width: 1px;
+    border-top: black solid;
+    border-left: black solid;
+    border-bottom: black solid;
+    background-color: rgb(207, 206, 206);
     display: flex;
     width: 100%;
     min-width: 1vh;
-    height: 3vh;
+    height: 30px;
+    font-size: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.margenIzquierdo {
+    border-width: 2px !important;
+    border-left: black solid;
+}
+
+.sector {
+    display: flex;
+    width: 100%;
+    min-width: 1vh;
+    height: 30px;
     justify-content: start;
     align-items: center;
 }
-.linea{
-    display: flex;
-    width: 100%;
-    height: 2px;
-    justify-content: start;
-    background-color: black;
-}
 
-.imagen{
+
+.imagen {
     cursor: pointer;
+    width: 30px;
+    height: 30px;
 }
 
-.inputs{
+.inputs {
     display: flex;
     width: 65%;
-    height: 3vh;
+    height: 30px;
 }
 
-.botonGuardar{
+.botonGuardar {
     display: flex;
     width: 100%;
-    height: 3vh;
+    height: 30px;
     align-items: center;
     justify-content: center;
     background-color: rgb(230, 230, 230);
     cursor: pointer;
 }
 
-.botonGuardar:hover{
+.botonGuardar:hover {
     background-color: rgb(192, 189, 189);
 }
 
-.espacioVacio{
+.espacioVacio {
     display: flex;
     width: 50%;
     min-width: 1vh;
     background-color: transparent;
-    height: 3vh;
+    height: 30px;
 }
 
-.espacioPequenio{
+.espacioPequenio {
     display: flex;
     width: 10%;
     min-width: 1vh;
     background-color: transparent;
-    height: 3vh;
+    height: 30px;
 }
 
-.encabezado{
+.tabla {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    height: 100%;
+}
+
+
+.encabezadoTabla {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    height: 100%;
+}
+
+
+.filasTabla {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    height: 100%;
+}
+
+.celda {
+    display: flex;
+    width: 100%;
+    min-width: 1vh;
+    background-color: rgb(240, 239, 239);
+    height: 30px;
+    ;
+    border-left: black solid;
+    border-right: black solid;
+    border-width: 1px;
+    justify-content: center;
+}
+
+.select {
+    display: flex;
+    width: 50%;
+    min-width: 1vh;
+    background-color: rgb(240, 239, 239);
+    height: 30px;
+    border-left: black solid;
+    border-right: black solid;
+    border-width: 1px;
+    justify-content: center;
+}
+
+.espacio {
+    display: flex;
+    width: 100%;
+    min-width: 1vh;
+    background-color: transparent;
+    height: 30px;
+    ;
+}
+
+.encabezado {
     margin-top: 5vh;
     border-style: 10px black solid;
 }
 
-.formulario{
-    margin-top: 5vh;
+.cuerpo {
+    display: flex;
+    overflow-y: hidden;
+    flex-direction: column;
+    width: 100vh;
+}
+
+.scrollSuperior {
+    height: 70vh;
+    overflow: auto !important;
+    overflow-x: hidden;
+}
+
+.scrollInferior {
+    min-height: 30vh;
+    overflow: auto !important;
+    overflow-x: hidden;
+}
+.form-check-label{
+    width: 100%!important;
 }
