--- a/src/main/webapp/ui/vistas/crearUsuario.css
+++ b/src/main/webapp/ui/vistas/crearUsuario.css
@@ -1,4 +1,4 @@
-.cuerpo{
+.cuerpoo{
     display: flex;
     align-items: center;
     width: 100%;
@@ -14,7 +14,7 @@
     height: 40%;
     justify-content: center;
     align-items: center;
-    font-size: 1.5vh;
+    font-size: 30px;
     text-align: center;
 }
 
@@ -33,7 +33,7 @@
 
 .entrada{
     display: flex;
-    width: 35vh;
+    width: 100%;
 }
 
 .portaFoto{
