lista la interfaz para crear usuario
Signed-off-by: Pablo592 <pgaido524@alumnos.iua.edu.ar>

--- a/src/main/webapp/ui/vistas/index.css
+++ b/src/main/webapp/ui/vistas/index.css
@@ -113,3 +113,12 @@
 .puntero {
     cursor: pointer;
 }
+
+.crearUsuarioBoton{
+    display: flex;
+    width: 40%;
+    font-size: 30px;
+    background-color: rgb(227, 226, 226);
+    margin-right: 10px;
+    cursor: pointer;
+}
