--- a/src/main/webapp/ui/vistas/ordenes.css
+++ b/src/main/webapp/ui/vistas/ordenes.css
@@ -187,3 +187,14 @@
     margin-left: 4%;
     margin-bottom: 20px;
 }
+
+.BuscarRefrescar{
+    display: flex;
+    flex-direction: row;
+}
+
+.botonRefrescar{
+    margin-left: 20px;
+    width: 100%;
+    height: 30px;
+}
